@@ -1,5 +1,6 @@
 --- 14-Apr-2011, version 1.8-13
-Added new functions Moran (global) and MoranLocal
+Added new functions Geary, Moran (global) and MoranLocal
+New option to focalFilter "pad" to better deal with edge effects
 
 --- 11-Apr-2011, version 1.8-12
 Major bug fix in focalFilter. In previous versoins results were wrong for filters larger than 3x3 !
